cleaned report column '94

--- a/Data/Monarchs_1994_cleanup.ipynb
+++ b/Data/Monarchs_1994_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1994_index</td>\n",
        "      <td>monarchs1994</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1994_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -101,7 +101,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1994_index  monarchs1994         3   \n",
+       "0  index  ix_monarchs1994_index  monarchs1994         4   \n",
        "1  table           monarchs1994  monarchs1994         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -109,7 +109,7 @@
        "1  CREATE TABLE \"monarchs1994\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "10   10        Distance     TEXT        0       None   0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "9                    Kansas City,\\nMO      0 m  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Plattsburgh Air Force Base</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -556,7 +556,7 @@
       "text/plain": [
        "                     tag_city Tag State\n",
        "0                       Tully        NY\n",
-       "1  Plattsburgh Air Force Base      None\n",
+       "1  Plattsburgh Air Force Base        NY\n",
        "2                   Kent Park        IA\n",
        "3                     Carroll        IA\n",
        "4                        Hays        KS\n",
@@ -567,7 +567,7 @@
        "9                 Kansas City        MO"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,6 +578,7 @@
     "df2.columns = ['tag_city', 'Tag State']\n",
     "df2.loc[df2['Tag State'] == 'Quebec, Canada', 'Tag State'] = 'Quebec'\n",
     "df2.loc[df2['Tag State'] == 'Coahuila, Mexico', 'Tag State'] = 'Coahuila'\n",
+    "df2.loc[df2['Tag State'].isnull(), 'Tag State'] = 'NY'\n",
     "df2['Tag State'] = df2['Tag State'].str.strip(\".\")\n",
     "df2.head(10)"
    ]
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -622,83 +623,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>El Rosario colony</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>LaFayette</td>\n",
+       "      <td>NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>El Rosario colony</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Plattsburgh Air Force Base</td>\n",
+       "      <td>NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>El Rosario colony</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>MO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Chinqua</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Carroll</td>\n",
+       "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Chinqua</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Hays</td>\n",
+       "      <td>KS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Sierra Chinqua</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>North High School Des Moines</td>\n",
+       "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Chinqua</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>5mile east of Drexel</td>\n",
+       "      <td>MO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Herrada or Las Palomas</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Dyersville</td>\n",
+       "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>El Rosario colony</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Wichita</td>\n",
+       "      <td>KS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Chinqua</td>\n",
-       "      <td>Michoacán</td>\n",
+       "      <td>Kansas City</td>\n",
+       "      <td>MO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              report_city Report State\n",
-       "0       El Rosario colony    Michoacán\n",
-       "1       El Rosario colony    Michoacán\n",
-       "2       El Rosario colony    Michoacán\n",
-       "3                 Chinqua    Michoacán\n",
-       "4                 Chinqua    Michoacán\n",
-       "5          Sierra Chinqua    Michoacán\n",
-       "6                 Chinqua    Michoacán\n",
-       "7  Herrada or Las Palomas    Michoacán\n",
-       "8       El Rosario colony    Michoacán\n",
-       "9                 Chinqua    Michoacán"
+       "                    report_city Report State\n",
+       "0                     LaFayette           NY\n",
+       "1    Plattsburgh Air Force Base           NY\n",
+       "2                        Mexico           MO\n",
+       "3                       Carroll           IA\n",
+       "4                          Hays           KS\n",
+       "5  North High School Des Moines           IA\n",
+       "6          5mile east of Drexel           MO\n",
+       "7                    Dyersville           IA\n",
+       "8                       Wichita           KS\n",
+       "9                   Kansas City           MO"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df['Where Recovered'].str.contains(\"\\n\", na=False), \"Where Recovered\"] = df.loc[df['Where Recovered'].str.contains(\"\\n\", na=False), \"Where Recovered\"].str.replace(\"\\n\", \" \")\n",
-    "df3 = df['Where Recovered'].str.split(', ', expand=True, n=1)\n",
+    "df.loc[df['Location.1'].str.contains(\"\\n\", na=False), \"Location.1\"] = df.loc[df['Location.1'].str.contains(\"\\n\", na=False), \"Location.1\"].str.replace(\"\\n\", \" \")\n",
+    "df3 = df['Location.1'].str.split(',', expand=True, n=1)\n",
     "df3.columns = ['report_city', 'Report State']\n",
     "df3['Report State'] = df3['Report State'].str.strip()\n",
+    "df3['Report State'] = df3['Report State'].str.strip('.')\n",
     "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'Michoacán'\n",
+    "df3.loc[df3['Report State'] == 'Essex Junction, VT', 'Report State'] = 'VT'\n",
+    "df3.loc[df3['Report State'] == 'Conn', 'Report State'] = 'CT'\n",
+    "df3.loc[df3['Report State'].isnull(), 'Report State'] = 'NY'\n",
+    "df3['Report State'] = df3['Report State'].str.replace(' ','')\n",
     "df3.head(10)"
    ]
   },
