--- a/Data/Monarchs_1994_cleanup.ipynb
+++ b/Data/Monarchs_1994_cleanup.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -747,22 +747,146 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MEXICO</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>MEXICO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
        "      <td>MEXICO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -770,25 +894,56 @@
        "</div>"
       ],
       "text/plain": [
-       "  Report Country\n",
-       "0         MEXICO\n",
-       "1         MEXICO\n",
-       "2         MEXICO\n",
-       "3         MEXICO\n",
-       "4         MEXICO"
+       "   Report Country\n",
+       "0             NaN\n",
+       "1             NaN\n",
+       "2             NaN\n",
+       "3             NaN\n",
+       "4             NaN\n",
+       "5             NaN\n",
+       "6             NaN\n",
+       "7             NaN\n",
+       "8             NaN\n",
+       "9             NaN\n",
+       "10            NaN\n",
+       "11            NaN\n",
+       "12            NaN\n",
+       "13            NaN\n",
+       "14            NaN\n",
+       "15            NaN\n",
+       "16            NaN\n",
+       "17            NaN\n",
+       "18            NaN\n",
+       "19            NaN\n",
+       "20            NaN\n",
+       "21            NaN\n",
+       "22            NaN\n",
+       "23            NaN\n",
+       "24            NaN\n",
+       "25            NaN\n",
+       "26         MEXICO\n",
+       "27            NaN\n",
+       "28         MEXICO\n",
+       "29         MEXICO\n",
+       "30         MEXICO\n",
+       "31         MEXICO\n",
+       "32         MEXICO\n",
+       "33         MEXICO\n",
+       "34            NaN\n",
+       "35         MEXICO"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "add_country = df['Where Recovered'].str.extract(\"(Mexico)\", expand=True)\n",
+    "add_country = df['Location.1'].str.extract(\"(Angangueo)\", expand=True)\n",
     "add_country.columns = ['Report Country']\n",
-    "add_country.loc[add_country['Report Country'] == 'Mexico', 'Report Country'] = 'MEXICO'\n",
+    "add_country.loc[add_country['Report Country'] == 'Angangueo', 'Report Country'] = 'MEXICO'\n",
     "add_country.loc[add_country['Report Country'].isnull(), 'Report Country'] = 'USA'\n",
-    "add_country.head(5)"
+    "add_country"
    ]
   },
   {
