--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -939,6 +939,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Report Date"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
